Thu Dec 10 20:03:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Improved error message

Thu Dec 10 15:37:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ACETAOCIAO.style:
          Small updates

Thu Dec 10 15:10:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Check all run_*.pl files for fuzz

Thu Dec 10 13:07:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          Removed hard supported version check

Wed Dec  9 10:52:26 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * bin/fuzz.pl:

          Updated conditions for new framework

Mon Dec  7 16:09:18 UTC 2009  Steve Huston  <shuston@riverace.com>

        * tests/Basic_Types_Test.cpp: Add a verification for the endianness
          setting.

Mon Dec  7 07:40:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/bmake.features:
          Disable mcpp for bmake

Fri Dec  4 23:24:21 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * bin/MakeProjectCreator/config/global.features:

          Added mpc feature to optionally turn on the indirection
          support on valuetype outgoing message. It defaults to
          be enabled. To be compatible with previous version TAO,
          it needs run mwc.pl with
          "-features valuetype_out_indirection=0" to disable it.

Fri Dec  4 17:25:32 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * NEWS:

          Removed entry for member validation feature in LoadBalancer as it
          should be in TAO NEWS.

Fri Dec  4 13:19:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Added link for IBM Cell xampler performance stats

Fri Dec  4 10:20:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/fuzz.pl:
          Removed -v option. The information which is generated
          by -v should always be visible.
